--- a/myPracticeCourseWork/project-template/shopping-cart-application/web/src/main/webapp/resources/css/navbar.css
+++ b/myPracticeCourseWork/project-template/shopping-cart-application/web/src/main/webapp/resources/css/navbar.css
@@ -46,3 +46,25 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+/* Shopping Cart Item CSS
+-------------------------------------------------- */
+
+.cartObject {
+    padding: 15px 0 15px 0;
+}
+
+.cartObject a {
+    padding-left: 5px;
+    color: #777;
+    text-decoration: none;
+}
+
+.cartObject a:hover {
+    color: #333
+}
+
+.cartObject a p {
+    padding-left: 5px;
+    display: inline;
+}
